se agregaron detalles del about y correcciones del home

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 			<div class="bac-about-us">
 				<div class="bac-narrow-content">
 						<div class="about-desc">
-							<h1 class="bac-heading-us">SOMOS</h1>
+							<h1 class="bac-heading-us">SOMOS <span class="somos-r"></span></h1>
 							<p> <strong>Hace..... años que nuestro Estudio de Arquitectura nació con la idea de innovar en ideas, servicios y especialmente en el trato hacia nuestros clientes.</strong> Porque detrás de nuestro conocimiento y los aspectos netamente técnicos que perfilan el trabajo de la construcción, hay profesionales apasionados abocados a crear, en su máxima expresión. Con pasión, estilo y responsabilidad.<br>
 							<strong>Nuestro equipo está formado por profesionales volcados a la arquitectura y ramas afines</strong>, que supieron generar desde niños y adolescentes un vínculo que el tiempo se encargaría de consolidar.<br>
 							<strong>Nació  hace 15 años atrás</strong>, en el entusiasmo de dos compañeros en la formación industrial, Cristian Castro (Maestro Mayor de Obras) y Sebastián Biondi, (Maestro Mayor de Obras y Arquitecto) que, a lo largo de su formación laboral, adquirieron la experiencia y las herramientas necesarias para garantizar un trabajo serio, honesto y eficiente.<br>
@@ -102,60 +102,71 @@
 						<div class="project" style="background-image: url(images/empleado1.jpg);">
 							<div class="desc">
 								<div class="con">
-									<a href="#"><i class="icon-linkedin2"></i></a>>
-									<span>Empleado inicial</span>
+									<a href="#"><i class="icon-linkedin2"></i></a>
+									<span>Breve reseña del empleado</span>
 								</div>
 							</div>
 						</div>
+						<h4>Nombre y Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado2.jpg);">
 							<div class="desc">
 								<div class="con">
-									<span>Empleado inicial</span>
+									<a href="#"><i class="icon-linkedin2"></i></a>
+									<span>Breve reseña del empleado</span>
 								</div>
 							</div>
 						</div>
+						<h4>Nombre y Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado3.jpg);">
 							<div class="desc">
 								<div class="con">
-									<span>Empleado inicial</span>
+									<a href="#"><i class="icon-linkedin2"></i></a>
+									<span>Breve reseña del empleado </span>
 								</div>
 							</div>
 						</div>
+						<h4>Nombre y Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="desc">
 							<div class="project" style="background-image: url(images/empleado4.jpg);">
 								<div class="desc">
 									<div class="con">
-									<span>Empleado inicial</span>
+										<a href="#"><i class="icon-linkedin2"></i></a>
+									<span>Breve reseña del empleado</span>
 									</div>
 								</div>
 							</div>
 						</div>
+						<h4>Nombre y Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado5.jpg);">
 							<div class="desc">
 								<div class="con">
-									<span>Empleado inicial</span>
+									<a href="#"><i class="icon-linkedin2"></i></a>
+									<span>Breve reseña del empleado</span>
 								</div>
 							</div>
 						</div>
+						<h4>Nombre y Apellido</h4>
 					</div>
 				</div>
 
 				<div class="bac-about-us">
 					<div class="about-desc">
 						<h2 class="bac-heading-us">Nuestros Servicios</h2>
-						<p> - Elaboración de proyectos, dirección, seguimiento, dirección ejecutiva, ejecución, mediciones, etc. También realizamos habilitaciones y cualquier tipo de asesoramiento.<br>
-						- Servicio Integral, utilizando materiales de propiedades nobles, alta calidad y mano de obra calificada.<br>
-						-  Asesoría clara y sincera acerca de su proyecto, priorizando lo que a usted más le interese, calidad, diseño, precio o innovación.<br>
-						- Aprovechamiento de todas las herramientas creativas puestas a su disposición mediante diseños en 3D, maquetas y elementos gráficos para la mejor visualización de tu proyecto antes de realizar su inversión.<br>
-						-  Trato cordial y personalizado, asesorándolos en todo momento sobre el camino correcto a seguir.</p>
+						<ul>
+						<li>Elaboración de proyectos, dirección, seguimiento, dirección ejecutiva, ejecución, mediciones, etc. También realizamos habilitaciones y cualquier tipo de asesoramiento.</li>
+						<li>Servicio Integral, utilizando materiales de propiedades nobles, alta calidad y mano de obra calificada.</li>
+						<li>Asesoría clara y sincera acerca de su proyecto, priorizando lo que a usted más le interese, calidad, diseño, precio o innovación.</li>
+						<li>Aprovechamiento de todas las herramientas creativas puestas a su disposición mediante diseños en 3D, maquetas y elementos gráficos para la mejor visualización de tu proyecto antes de realizar su inversión.</li>
+						<li>Trato cordial y personalizado, asesorándolos en todo momento sobre el camino correcto a seguir.</li>
+						</ul>
 					</div>
 				</div>
 
