--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
 						<div class="col-md-12 text-center animate-box">
 							<span class="icon"><img src="images/logo.png" alt="Logo BAC" style="width: 150px;"></span>
 							<span class="bac-counter-label">CONOCÉ NUESTROS PROYECTOS</span>
-							<!-- <span class="icon"><a href="projects.html">	<i class="flaticon-engineering"></i></a></span> -->
 							<span><a href="projects.html" class="btn btn-primary btn-lg">INGRESAR</a></span>
 						</div>
 					</div>
@@ -231,7 +230,9 @@
 					<div class="row">
 						<div class="col-md-7 animate-box" data-animate-effect="fadeInLeft" id="contactate">
 							<div class="bac-side text-center">
-								<h4>¡Seguinos en nuestras redes sociales!</h4>
+								<div class="seguinos">
+									<h4>¡Seguinos en nuestras redes sociales!</h4>
+								</div>
 								<div class="bac-footer">
 									<ul>
 										<li><a href="#"><i class="icon-facebook2"></i></a></li>
