agregué svg y ordené el viewport

--- a/about.html
+++ b/about.html
@@ -76,6 +76,9 @@
 
 		<div id="bac-main">
 			<div class="about-img-2" style="background-image: url(images/team-bac.jpg);">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+					<polygon fill="white" points="0,0 9,0 15,100 21,0  100,0 100,100 0,100" />
+				</svg>
 			</div>
 			<div class="bac-about-us">
 				<div class="bac-narrow-content">
