se agregaron cambios al about y testeamos index para telefono y mail

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 		<div id="bac-main">
 			<div class="about-img-2" style="background-image: url(images/team-bac.jpg);">
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-					<polygon fill="white" points="0,0 9,0 15,100 21,0  100,0 100,100 0,100" />
+					<polygon fill="white" points="0,0 8,0 15,100 22,0  100,0 100,100 0,100" />
 				</svg>
 			</div>
 			<div class="bac-about-us">
@@ -106,33 +106,33 @@
 							<div class="desc">
 								<div class="con">
 									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Breve reseña del empleado</span>
+									<span>Aqui se puede poner una breve reseña del empleado</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre y Apellido</h4>
+						<h4>Nombre Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado2.jpg);">
 							<div class="desc">
 								<div class="con">
 									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Breve reseña del empleado</span>
+									<span>Aqui se puede poner una breve reseña del empleado</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre y Apellido</h4>
+						<h4>Nombre Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado3.jpg);">
 							<div class="desc">
 								<div class="con">
 									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Breve reseña del empleado </span>
+									<span>Aqui se puede poner una breve reseña del empleado </span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre y Apellido</h4>
+						<h4>Nombre Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="desc">
@@ -140,23 +140,23 @@
 								<div class="desc">
 									<div class="con">
 										<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Breve reseña del empleado</span>
+									<span>Aqui se puede poner una breve reseña del empleado</span>
 									</div>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre y Apellido</h4>
+						<h4>Nombre Apellido</h4>
 					</div>
 					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado5.jpg);">
 							<div class="desc">
 								<div class="con">
 									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Breve reseña del empleado</span>
+									<span>Aqui se puede poner una breve reseña del empleado</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre y Apellido</h4>
+						<h4>Nombre Apellido</h4>
 					</div>
 				</div>
 
