--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
 					<li><a href="about.html">Quienes Somos</a></li>
 					<li><a href="#">Tour 360°</a></li>
 					<li><a href="contact.html">Contacto</a></li>
-
 				</ul>
 			</nav>
 			<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
+
+			<h4 style="padding-left: 15px; color: #58a; font-weight: 900;">Tel: 1512345678</h4>
+			<h4 style="padding-left: 15px; color: #58a; font-weight: 900;"><a href="mailto:info@estudiobac.com">info@estudiobac.com</a></h4>
+			<ul style="margin-bottom:35px;"><li><a href="tel:1512345678" class="btn btn-primary" style="letter-spacing:3px; color:white;"><i class="icon-phone"></i>comunicate</a></li></ul>
+			<ul style="margin-bottom:35px;"><li><a href="tel:1512345678" class="btn btn-primary" style="letter-spacing:0px; color:white;"><i class="icon-phone"></i></a><a href="mailto:info@estudiobac.com" class="btn btn-primary" style="letter-spacing:0px; color:white; font-size:34px;">
+				<i class="icon-mail"></i></a></li></ul>
+
 			<div class="bac-footer">
+
 				<ul>
 					<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
