se modificaron font size y se sacaron botones de prueba

--- a/index.html
+++ b/index.html
@@ -64,12 +64,9 @@
 				</ul>
 			</nav>
 			<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
-
-			<h4 style="padding-left: 15px; color: #58a; font-weight: 900;">Tel: 1512345678</h4>
-			<h4 style="padding-left: 15px; color: #58a; font-weight: 900;"><a href="mailto:info@estudiobac.com">info@estudiobac.com</a></h4>
-			<ul style="margin-bottom:35px;"><li><a href="tel:1512345678" class="btn btn-primary" style="letter-spacing:3px; color:white;"><i class="icon-phone"></i>comunicate</a></li></ul>
-			<ul style="margin-bottom:35px;"><li><a href="tel:1512345678" class="btn btn-primary" style="letter-spacing:0px; color:white;"><i class="icon-phone"></i></a><a href="mailto:info@estudiobac.com" class="btn btn-primary" style="letter-spacing:0px; color:white; font-size:34px;">
-				<i class="icon-mail"></i></a></li></ul>
+			<a href="tel:1512345678" class="btn btn-primary" style="letter-spacing:1px; margin: 30px 0 0 0px; color:white;"><i class="icon-phone"></i>15-1234-5678</a>
+			<a href="mailto:info@estudiobac.com" class="btn btn-primary" style="letter-spacing:0px; margin: 30px 0 0 0px; color:white;">
+			<i class="icon-mail"></i></a>
 
 			<div class="bac-footer">
 
@@ -193,7 +190,7 @@
 										</div>
 										<div class="bac-text">
 											<h3>Construcción Integral</h3>
-											<p>BAC Estudio de Arquitectura se compromete en la entrega de proyectos llave en mano. </p><br>
+											<p>BAC Estudio de Arquitectura se compromete en la entrega de proyectos llave en mano. </p>
 										</div>
 									</div>
 
