incorporé pestaanas con categorías para c/pr

--- a/about.html
+++ b/about.html
@@ -76,8 +76,8 @@
 
 		<div id="bac-main">
 			<div class="about-img-2" style="background-image: url(images/team-bac.jpg);">
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-					<polygon fill="white" points="0,0 8,0 15,100 22,0  100,0 100,100 0,100" />
+				<svg id="poly1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+					<polygon  fill="white" points="0,0 8,0 15,100 22,0  100,0 101,101 0,101" />
 				</svg>
 			</div>
 			<div class="bac-about-us">
@@ -98,6 +98,9 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- TODO: Analizar crear tabla con pestanias -->
+
 				<div class="row linked">
 					<div class="col-md-1">
 					</div>
