--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 				</ul>
 			</nav>
 			<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
-			<a href="tel:1512345678" class="btn btn-primary" style="letter-spacing:1px; margin: 30px 0 0 0px; color:white;"><i class="icon-phone"></i>15-1234-5678</a>
-			<a href="mailto:info@estudiobac.com" class="btn btn-primary" style="letter-spacing:0px; margin: 30px 0 0 0px; color:white;">
-			<i class="icon-mail"></i></a>
+			<div class="comunicate">
+				<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
+				<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
+				<i class="icon-mail"></i> consultanos</a>
+			</div>
 
 			<div class="bac-footer">
 
