se modificó projects se modificó imagenes del about, css gral

--- a/about.html
+++ b/about.html
@@ -102,9 +102,7 @@
 				<!-- TODO: Analizar crear tabla con pestanias -->
 
 				<div class="row linked">
-					<div class="col-md-1">
-					</div>
-					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-sm-offset-1 col-md-2 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado1.jpg);">
 							<div class="desc">
 								<div class="con">
