--- a/projects.html
+++ b/projects.html
@@ -75,17 +75,17 @@
 			<div class="bac-projects">
 				<div class="bac-narrow-content">
 					<div class="row">
-						<div class="col-lg-12 col-md-6 col-sm-6 col-xs-6 animate-box sideToSide" data-animate-effect="fadeInLeft">
-							<div class="projects-entry">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
+							<div class="projects-entry first-fix">
 								<a href="proyecto-1.html" class="projects-img"><img src="images/cat 1.jpg" class="img-responsive" alt=""></a>
 							</div>
 						</div>
-						<div class="col-lg-12 col-md-6 col-sm-6 col-xs-6 animate-box sideToSide" data-animate-effect="fadeInLeft">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 							<div class="projects-entry">
 								<a href="proyecto-2.html" class="projects-img"><img src="images/cat 2.jpg" class="img-responsive" alt=""></a>
 							</div>
 						</div>
-						<div class="col-lg-12 col-md-6 col-sm-6 col-xs-6 animate-box sideToSide" data-animate-effect="fadeInLeft">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 							<div class="projects-entry">
 								<a href="proyecto-3.html" class="projects-img"><img src="images/cat 3.jpg" class="img-responsive" alt=""></a>
 							</div>
