--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<li><a href="contact.html">Contacto</a></li>
 				</ul>
 			</nav>
-			<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
+			<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
 			<div class="comunicate">
 				<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
 				<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
