--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 										</div>
 										<div class="bac-text">
 											<h3>Evaluación de Proyectos</h3>
-											<p>Se analiza y determinan viavilidades constructivas para proyectos de inversión.</p>
+											<p>Se analiza y determinan viabilidades constructivas para proyectos de inversión.</p>
 										</div>
 									</div>
 								</div>
