se agrega texto a proyectos, falta responsive, y modif varias

--- a/projects.html
+++ b/projects.html
@@ -77,17 +77,27 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 							<div class="projects-entry first-fix">
-								<a href="proyecto-1.html" class="projects-img"><img src="images/cat 1.jpg" class="img-responsive" alt=""></a>
+								<a href="proyecto-1.html" class="projects-img">
+									<img src="images/cat 1.jpg" class="img-responsive" alt="">
+									<div class="centered">RESIDENCIALES</div>
+									<!-- TODO: hay que ver el tema de imagenes o bg, y como rotarlo para que quede bien -->
+								</a>
 							</div>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 							<div class="projects-entry">
-								<a href="proyecto-2.html" class="projects-img"><img src="images/cat 2.jpg" class="img-responsive" alt=""></a>
+								<a href="proyecto-2.html" class="projects-img">
+									<img src="images/cat 2.jpg" class="img-responsive" alt="">
+									<div class="centered">COMERCIALES</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 							<div class="projects-entry">
-								<a href="proyecto-3.html" class="projects-img"><img src="images/cat 3.jpg" class="img-responsive" alt=""></a>
+								<a href="proyecto-3.html" class="projects-img">
+									<img src="images/cat 3.jpg" class="img-responsive" alt="">
+									<div class="centered">DESARROLLOS INMOBILIARIOS</div>
+								</a>
 							</div>
 						</div>
 					</div>
