se optimizó el responsive de proyectos y modificaron links del comunicate

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 								<p class="bac-lead">Dirección: Sarmiento 1107, San Miguel</p>
 								<p class="bac-lead">Teléfono: 15-6554-0034</p>
 								<p class="bac-lead">Mail: info@estudiobac.com</p>
-								<a href="contact.html">Nuestros Proyectos </a><span> | </span>
-								<a href="contact.html">Quienes Somos</a><span> | </span>
+								<a href="projects.html">Nuestros Proyectos </a><span> | </span>
+								<a href="about.html">Quienes Somos</a><span> | </span>
 								<a href="contact.html">Contacto</a>
 								<p class="copy">2019 - Todos los derechos reservados.</p>
 							</div>
