--- a/about.html
+++ b/about.html
@@ -75,17 +75,17 @@
 			</aside>
 
 		<div id="bac-main">
-			<div class="about-img-2" style="background-image: url(images/team-bac.jpg);">
+			<div class="about-img-2" style="background-image: url(images/teambac.jpg);">
 				<svg id="poly1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-					<polygon  fill="white" points="0,0 8,0 15,100 22,0  100,0 101,101 0,101" />
+					<polygon  fill="white" points="0,0 42,0 49,100 56,0  100,0 101,101 0,101" />
 				</svg>
 			</div>
 			<div class="bac-about-us">
 				<div class="bac-narrow-content">
 						<div class="about-desc">
-							<h1 class="bac-heading-us">SOMOS <span class="somos-r"></span></h1>
+							<span class="somos-l"></span><h1 class="bac-heading-us"> SOMOS <span class="somos-r"></span></h1>
 							<p><strong>Hace..... años que nuestro Estudio de Arquitectura nació con la idea de innovar en ideas, servicios y especialmente en el trato hacia nuestros clientes.</strong> Porque detrás de nuestro conocimiento y los aspectos netamente técnicos que perfilan el trabajo de la construcción, hay profesionales apasionados abocados a crear, en su máxima expresión. Con pasión, estilo y responsabilidad.</p><p>
-							<strong>Nuestro equipo está formado por profesionales volcados a la arquitectura y ramas afines</strong>, que supieron generar desde niños y adolescentes un vínculo que el tiempo se encargaría de consolidar.</p><p>
+							<strong>Nuestro equipo está formado por profesionales volcados a la arquitectura y ramas afines</strong>, que supieron generar desde niños y adolescentes un vínculo que el tiempo se encargaría de consolidar.</p><br><p>
 							<strong>Nació  hace 15 años atrás</strong>, en el entusiasmo de dos compañeros en la formación industrial, Cristian Castro (Maestro Mayor de Obras) y Sebastián Biondi, (Maestro Mayor de Obras y Arquitecto) que, a lo largo de su formación laboral, adquirieron la experiencia y las herramientas necesarias para garantizar un trabajo serio, honesto y eficiente.</p><p>
 							En el camino, aprendieron del trabajo interdisciplinario con profesionales dedicados al diseño gráfico, la arquitectura del paisaje, diseño de interiores, artes visuales y plásticas, albañiles, herreros, pintores, plomeros y electricistas, relacionistas públicos, publicistas  y especialistas en administración de empresas con la finalidad de aunar criterios en la resolución de las necesidades puntuales de sus clientes.</p><p>
 							Luego de participar de diversos proyectos de envergadura, en la faz arquitectónica y comercial, empezaron a  trabajar juntos en el mercado inmobiliario, generando desarrollo para distintos inversores, complejos habitacionales, dúplex, edificios, entre otros, creando obras innovadoras y con sello propio.</p><p>
@@ -102,62 +102,62 @@
 				<!-- TODO: Analizar crear tabla con pestanias -->
 
 				<div class="row linked">
-					<div class="col-sm-offset-1 col-md-2 animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-md-offset-1 col-md-2 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado1.jpg);">
 							<div class="desc">
 								<div class="con">
-									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Aqui se puede poner una breve reseña del empleado</span>
+									<a href="https://www.linkedin.com/in/pilar-manfredi-68b12351"><i class="icon-linkedin2"></i></a>
+									<span>Proyectista en BAC</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre Apellido</h4>
+						<h4>Pilar Manfredi</h4>
 					</div>
-					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-md-2 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado2.jpg);">
 							<div class="desc">
 								<div class="con">
 									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Aqui se puede poner una breve reseña del empleado</span>
+									<span>Desarrollador en BAC</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre Apellido</h4>
+						<h4>Federico Castro</h4>
 					</div>
-					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-md-2 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado3.jpg);">
 							<div class="desc">
 								<div class="con">
-									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Aqui se puede poner una breve reseña del empleado </span>
+									<a href="https://www.linkedin.com/company/bac-estudio-de-arquitectura/"><i class="icon-linkedin2"></i></a>
+									<span>M.M.O. y Desarrollador en BAC</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre Apellido</h4>
+						<h4>Cristian Castro</h4>
 					</div>
-					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-md-2 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="desc">
 							<div class="project" style="background-image: url(images/empleado4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Aqui se puede poner una breve reseña del empleado</span>
+										<a href="https://www.linkedin.com/in/sebastian-biondi-b4a293181"><i class="icon-linkedin2"></i></a>
+									<span>Arquitecto en BAC</span>
 									</div>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre Apellido</h4>
+						<h4>Sebastián Biondi</h4>
 					</div>
-					<div class="col-md-2 animate-box" data-animate-effect="fadeInLeft">
+					<div class="col-md-2 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/empleado5.jpg);">
 							<div class="desc">
 								<div class="con">
-									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Aqui se puede poner una breve reseña del empleado</span>
+									<a href="https://www.linkedin.com/in/walter-martinez-97413336"><i class="icon-linkedin2"></i></a>
+									<span>Ingeniero en BAC</span>
 								</div>
 							</div>
 						</div>
-						<h4>Nombre Apellido</h4>
+						<h4>Walter Martínez</h4>
 					</div>
 				</div>
 
