se modificaron imagenes about, projects paso a vertical, index varios cambios

--- a/index.html
+++ b/index.html
@@ -116,24 +116,20 @@
 							</div>
 						</div>
 						<div class="col-md-6 show-img">
-							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(images/country-mag.jpg);">
+							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(images/soporte.jpg);">
 							</div>
-							<blockquote class="blockquote text-right">
-							  <p>Arquitectura dominante del entorno.</p>
-							  <footer class="blockquote-footer">Revista de arquitectura y construccion <cite title="casa country">Casa Country</cite></footer>
-							</blockquote>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div id="bac-counter" class="bac-counters" style="background-image: url(images/2_obra_belgrano_frente_sin_parasoles.jpg);" data-stellar-background-ratio="0.5">
+			<div id="bac-parallax" class="bac-parallax" style="background-image: url(images/estudio.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="bac-narrow-content">
 					<div class="row">
 						<div class="col-md-12 text-center animate-box">
 							<span class="icon"><img src="images/logo.png" alt="Logo BAC" style="width: 150px;"></span>
-							<span class="bac-counter-label">ESTUDIO DE ARQUITECTURA</span>
+							<span class="bac-parallax-label">ESTUDIO DE ARQUITECTURA</span>
 						</div>
 					</div>
 				</div>
@@ -205,7 +201,7 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(images/services.jpg);">
+							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(images/working.jpg);">
 							</div>
 						</div>
 					</div>
@@ -213,13 +209,13 @@
 			</div>
 
 
-			<div id="bac-counter1" class="bac-counters1" style="background-image: url(images/3.Frente_teja_plana_negra.jpg);" data-stellar-background-ratio="0.5">
+			<div id="bac-parallax1" class="bac-parallax1" style="background-image: url(images/3.Frente_teja_plana_negra.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="bac-narrow-content">
 					<div class="row">
 						<div class="col-md-12 text-center animate-box">
 							<span class="icon"><img src="images/logo.png" alt="Logo BAC" style="width: 150px;"></span>
-							<span class="bac-counter-label">CONOCÉ NUESTROS PROYECTOS</span>
+							<span class="bac-parallax-label">CONOCÉ NUESTROS PROYECTOS</span>
 							<span><a href="projects.html" class="btn btn-primary btn-lg">INGRESAR</a></span>
 						</div>
 					</div>
