--- a/projects.html
+++ b/projects.html
@@ -75,28 +75,34 @@
 			<div class="bac-projects">
 				<div class="bac-narrow-content">
 					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
-							<div class="projects-entry first-fix">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide qwe" data-animate-effect="fadeInLeft">
+							<div class="projects-entry">
 								<a href="proyecto-1.html" class="projects-img">
-									<img src="images/cat 1.jpg" class="img-responsive" alt="">
-									<div class="centered">RESIDENCIALES</div>
+									<img src="images/cat1.jpg" class="img-responsive s-off" alt="">
+									<img src="images/cat1l.jpg" class="img-responsive switch" alt="" style="height: 28vh; width: 100%;">
+									<div class="centered"><span class="up line">01.</span>
+										RESIDENCIALES</div>
 									<!-- TODO: hay que ver el tema de imagenes o bg, y como rotarlo para que quede bien -->
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 							<div class="projects-entry">
 								<a href="proyecto-2.html" class="projects-img">
-									<img src="images/cat 2.jpg" class="img-responsive" alt="">
-									<div class="centered">COMERCIALES</div>
+									<img src="images/cat2.jpg" class="img-responsive s-off" alt="">
+									<img src="images/cat2l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
+									<div class="centered"><span class="up line">02.</span>
+										COMERCIALES</div>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide asd" data-animate-effect="fadeInLeft">
 							<div class="projects-entry">
 								<a href="proyecto-3.html" class="projects-img">
-									<img src="images/cat 3.jpg" class="img-responsive" alt="">
-									<div class="centered">DESARROLLOS INMOBILIARIOS</div>
+									<img src="images/cat3.jpg" class="img-responsive s-off" alt="">
+									<img src="images/cat3l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
+									<div class="centered"><span class="up line">03.</span>
+										DESARROLLOS INMOBILIARIOS</div>
 								</a>
 							</div>
 						</div>
