--- a/about.html
+++ b/about.html
@@ -75,9 +75,10 @@
 			</aside>
 
 		<div id="bac-main">
-			<div class="about-img-2" style="background-image: url(images/teambac.jpg);">
+			<div class="about-img-2">
 				<svg id="poly1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-					<polygon  fill="white" points="0,0 42,0 49,100 56,0  100,0 101,101 0,101" />
+					<polygon fill="white" points="0,0 41,0 49,99 57,0  100,0 110,180 0,180 0,0" />
+					<!-- TODO: ver de arreglar margin top iphone -->
 				</svg>
 			</div>
 			<div class="bac-about-us">
@@ -107,7 +108,7 @@
 							<div class="desc">
 								<div class="con">
 									<a href="https://www.linkedin.com/in/pilar-manfredi-68b12351"><i class="icon-linkedin2"></i></a>
-									<span>Proyectista en BAC</span>
+									<span>Arquitecta</span>
 								</div>
 							</div>
 						</div>
@@ -117,8 +118,8 @@
 						<div class="project" style="background-image: url(images/empleado2.jpg);">
 							<div class="desc">
 								<div class="con">
-									<a href="#"><i class="icon-linkedin2"></i></a>
-									<span>Desarrollador en BAC</span>
+									<a href="https://www.linkedin.com/in/federico-castro-103587185"><i class="icon-linkedin2"></i></a>
+									<span>Desarrollador</span>
 								</div>
 							</div>
 						</div>
@@ -129,7 +130,7 @@
 							<div class="desc">
 								<div class="con">
 									<a href="https://www.linkedin.com/company/bac-estudio-de-arquitectura/"><i class="icon-linkedin2"></i></a>
-									<span>M.M.O. y Desarrollador en BAC</span>
+									<span>Desarrollador</span>
 								</div>
 							</div>
 						</div>
@@ -141,7 +142,7 @@
 								<div class="desc">
 									<div class="con">
 										<a href="https://www.linkedin.com/in/sebastian-biondi-b4a293181"><i class="icon-linkedin2"></i></a>
-									<span>Arquitecto en BAC</span>
+									<span>Arquitecto</span>
 									</div>
 								</div>
 							</div>
@@ -153,7 +154,7 @@
 							<div class="desc">
 								<div class="con">
 									<a href="https://www.linkedin.com/in/walter-martinez-97413336"><i class="icon-linkedin2"></i></a>
-									<span>Ingeniero en BAC</span>
+									<span>Ingeniero</span>
 								</div>
 							</div>
 						</div>
