--- a/projects.html
+++ b/projects.html
@@ -73,41 +73,37 @@
 
 		<div id="bac-main">
 			<div class="bac-projects">
-				<div class="bac-narrow-content">
-					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide qwe" data-animate-effect="fadeInLeft">
-							<div class="projects-entry">
-								<a href="proyecto-1.html" class="projects-img">
-									<img src="images/cat1.jpg" class="img-responsive s-off" alt="">
-									<img src="images/cat1l.jpg" class="img-responsive switch" alt="" style="height: 28vh; width: 100%;">
-									<div class="centered"><span class="up line">01.</span>
-										RESIDENCIALES</div>
-									<!-- TODO: hay que ver el tema de imagenes o bg, y como rotarlo para que quede bien -->
-								</a>
-							</div>
+				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide qwe" data-animate-effect="fadeInLeft">
+						<div class="projects-entry">
+							<a href="proyecto-1.html" class="projects-img">
+								<img src="images/cat1.jpg" class="img-responsive s-off" alt="">
+								<img src="images/cat1l.jpg" class="img-responsive switch" alt="" style="height: 28vh; width: 100%;">
+								<div class="centered"><span class="up line">01.</span><p>RESIDENCIALES</p></div>
+								<!-- TODO: hay que ver el tema de imagenes o bg, y como rotarlo para que quede bien -->
+							</a>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
-							<div class="projects-entry">
-								<a href="proyecto-2.html" class="projects-img">
-									<img src="images/cat2.jpg" class="img-responsive s-off" alt="">
-									<img src="images/cat2l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
-									<div class="centered"><span class="up line">02.</span>
-										COMERCIALES</div>
-								</a>
-							</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
+						<div class="projects-entry">
+							<a href="proyecto-2.html" class="projects-img">
+								<img src="images/cat2.jpg" class="img-responsive s-off" alt="">
+								<img src="images/cat2l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
+								<div class="centered"><span class="up line">02.</span><p>COMERCIALES</p></div>
+							</a>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide asd" data-animate-effect="fadeInLeft">
-							<div class="projects-entry">
-								<a href="proyecto-3.html" class="projects-img">
-									<img src="images/cat3.jpg" class="img-responsive s-off" alt="">
-									<img src="images/cat3l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
-									<div class="centered"><span class="up line">03.</span>
-										DESARROLLOS INMOBILIARIOS</div>
-								</a>
-							</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide asd" data-animate-effect="fadeInLeft">
+						<div class="projects-entry">
+							<a href="proyecto-3.html" class="projects-img">
+								<img src="images/cat3.jpg" class="img-responsive s-off" alt="">
+								<img src="images/cat3l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
+								<div class="centered"><span class="up line">03.</span><p class="last">DESARROLLOS INMOBILIARIOS</p></div>
+							</a>
 						</div>
 					</div>
 				</div>
+
 			</div>
 
 		<!-- </div> -->
