se agrega tour360, igualan las vistas y quitan animaciones en mobile

--- a/about.html
+++ b/about.html
@@ -55,17 +55,24 @@
 			<aside id="bac-aside" role="complementary" class="border js-fullheight">
 				<nav id="bac-main-menu" role="navigation">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li class="bac-active"><a href="index.html">Home</a></li>
 						<li><a href="projects.html">Proyectos</a></li>
-						<li class="bac-active"><a href="about.html">Quienes Somos</a></li>
-						<li><a href="#">Tour 360°</a></li>
+						<li><a href="about.html">Quienes Somos</a></li>
+						<li><a href="tour360.html">Tour 360°</a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</nav>
-				<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
+				<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
+
 				<div class="bac-footer">
+					<div class="comunicate">
+						<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
+						<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
+							<i class="icon-mail"></i> consultanos</a>
+						</div>
+
 					<ul>
-						<li><a href="#"><i class="icon-facebook2"></i></a></li>
+						<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
 						<li><a href="#"><i class="icon-twitter2"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="#"><i class="icon-linkedin2"></i></a></li>
@@ -195,8 +202,8 @@
 									<p class="bac-lead">Dirección: Sarmiento 1107, San Miguel</p>
 									<p class="bac-lead">Teléfono: 15-6554-0034</p>
 									<p class="bac-lead">Mail: info@estudiobac.com</p>
-									<a href="contact.html">Nuestros Proyectos </a><span> | </span>
-									<a href="contact.html">Quienes Somos</a><span> | </span>
+									<a href="projects.html">Nuestros Proyectos </a><span> | </span>
+									<a href="about.html">Quienes Somos</a><span> | </span>
 									<a href="contact.html">Contacto</a>
 									<p class="copy">2019 - Todos los derechos reservados.</p>
 								</div>
