--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<li class="bac-active"><a href="index.html">Home</a></li>
 					<li><a href="projects.html">Proyectos</a></li>
 					<li><a href="about.html">Quienes Somos</a></li>
-					<li><a href="#">Tour 360°</a></li>
+					<li><a href="tour360.html">Tour 360°</a></li>
 					<li><a href="contact.html">Contacto</a></li>
 				</ul>
 			</nav>
