--- a/projects.html
+++ b/projects.html
@@ -48,33 +48,39 @@
 		<a href="#" class="js-bac-nav-toggle bac-nav-toggle"><i></i>
 			<span class=""><img class="logo" src="images/logo.png"></span>
 		</a>
-			<aside id="bac-aside" role="complementary" class="border js-fullheight">
-				<nav id="bac-main-menu" role="navigation">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="bac-active"><a href="projects.html">Proyectos</a></li>
-						<li><a href="about.html">Quienes Somos</a></li>
-						<li><a href="#">Tour 360°</a></li>
-						<li><a href="contact.html">Contacto</a></li>
+		<aside id="bac-aside" role="complementary" class="border js-fullheight">
+			<nav id="bac-main-menu" role="navigation">
+				<ul>
+					<li class="bac-active"><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Proyectos</a></li>
+					<li><a href="about.html">Quienes Somos</a></li>
+					<li><a href="tour360.html">Tour 360°</a></li>
+					<li><a href="contact.html">Contacto</a></li>
+				</ul>
+			</nav>
+			<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
 
-					</ul>
-				</nav>
-				<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
-				<div class="bac-footer">
-					<ul>
-						<li><a href="#"><i class="icon-facebook2"></i></a></li>
-						<li><a href="#"><i class="icon-twitter2"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-					</ul>
-				</div>
+			<div class="bac-footer">
+				<div class="comunicate">
+					<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
+					<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
+						<i class="icon-mail"></i> consultanos</a>
+					</div>
 
-			</aside>
+				<ul>
+					<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
+					<li><a href="#"><i class="icon-twitter2"></i></a></li>
+					<li><a href="#"><i class="icon-instagram"></i></a></li>
+					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+				</ul>
+			</div>
+
+		</aside>
 
 		<div id="bac-main">
 			<div class="bac-projects">
 				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide qwe" data-animate-effect="fadeInLeft">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide s-first" data-animate-effect="fadeInLeft">
 						<div class="projects-entry">
 							<a href="proyecto-1.html" class="projects-img">
 								<img src="images/cat1.jpg" class="img-responsive s-off" alt="">
@@ -93,12 +99,12 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide asd" data-animate-effect="fadeInLeft">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide s-last" data-animate-effect="fadeInLeft">
 						<div class="projects-entry">
 							<a href="proyecto-3.html" class="projects-img">
 								<img src="images/cat3.jpg" class="img-responsive s-off" alt="">
 								<img src="images/cat3l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
-								<div class="centered"><span class="up line">03.</span><p class="last">DESARROLLOS INMOBILIARIOS</p></div>
+								<div class="centered"><span class="up line">03.</span><p class="p-last">DESARROLLOS INMOBILIARIOS</p></div>
 							</a>
 						</div>
 					</div>
