--- a/proyecto-1.html
+++ b/proyecto-1.html
@@ -50,19 +50,24 @@
 			<aside id="bac-aside" role="complementary" class="border js-fullheight">
 				<nav id="bac-main-menu" role="navigation">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="projects.html">Proyectos</a>
-							<li class="bac-active"><a class="building" href="proyecto-1.html">- Residenciales</a></li>
-						</li>
-						<li><a href="about.html">Quienes somos</a></li>
-						<li><a href="#">Tour 360°</a></li>
+						<li class="bac-active"><a href="index.html">Home</a></li>
+						<li><a href="projects.html">Proyectos</a></li>
+						<li><a href="about.html">Quienes Somos</a></li>
+						<li><a href="tour360.html">Tour 360°</a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</nav>
-				<a id="bac-logo" href="#"><img src="images/logo.png" alt="Logo BAC"></a>
+				<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
+
 				<div class="bac-footer">
+					<div class="comunicate">
+						<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
+						<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
+							<i class="icon-mail"></i> consultanos</a>
+						</div>
+
 					<ul>
-						<li><a href="#"><i class="icon-facebook2"></i></a></li>
+						<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
 						<li><a href="#"><i class="icon-twitter2"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="#"><i class="icon-linkedin2"></i></a></li>
@@ -238,9 +243,11 @@
 			<div id="get-in-touch" class="bac-bg-color animate-box">
 				<div class="bac-narrow-content">
 					<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" id="contactate">
+						<div class="col-md-7 animate-box" data-animate-effect="fadeInLeft" id="contactate">
 							<div class="bac-side text-center">
-								<h4>¡Seguinos en nuestras redes sociales!</h4>
+								<div class="seguinos">
+									<h4>¡Seguinos en nuestras redes sociales!</h4>
+								</div>
 								<div class="bac-footer">
 									<ul>
 										<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -253,13 +260,14 @@
 								<p class="bac-lead">Dirección: Sarmiento 1107, San Miguel</p>
 								<p class="bac-lead">Teléfono: 15-6554-0034</p>
 								<p class="bac-lead">Mail: info@estudiobac.com</p>
-								<a href="#">Como llegar </a><span> | </span>
-								<a href="#">Contacto</a>
+								<a href="projects.html">Nuestros Proyectos </a><span> | </span>
+								<a href="about.html">Quienes Somos</a><span> | </span>
+								<a href="contact.html">Contacto</a>
 								<p class="copy">2019 - Todos los derechos reservados.</p>
 							</div>
 						</div>
-						<div class="col-md-6" data-animate-effect="fadeInLeft" id="contact-img">
-							<img class="img-fluid" src="images/bac_slide_7.jpg" alt="">
+						<div class="col-md-5" data-animate-effect="fadeInLeft" id="contact-img">
+							<img class="img-fluid" src="images/byw.jpg" alt="">
 						</div>
 					</div>
 				</div>
