--- a/tour360.html
+++ b/tour360.html
@@ -51,23 +51,31 @@
 
 	</head>
 	<body>
-		<<div id="bac-page">
-			<a href="#" class="js-bac-nav-toggle bac-nav-toggle"><i></i></a>
+		<div id="bac-page">
+			<a href="#" class="js-bac-nav-toggle bac-nav-toggle"><i></i>
+				<span class=""><img class="logo" src="images/logo.png"></span>
+			</a>
 			<aside id="bac-aside" role="complementary" class="border js-fullheight">
 				<nav id="bac-main-menu" role="navigation">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li class="bac-active"><a href="index.html">Home</a></li>
 						<li><a href="projects.html">Proyectos</a></li>
-						<li><a href="#">Quienes Somos</a></li>
-						<li><a href="#">Tour 360°</a></li>
-						<li class="bac-active"><a href="contact.html">Contacto</a></li>
-
+						<li><a href="about.html">Quienes Somos</a></li>
+						<li><a href="tour360.html">Tour <span id="demotext">360°</span></a></li>
+						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</nav>
-				<a id="bac-logo" href="#"><img src="images/bac-logo.png" alt="Logo BAC"></a>
+				<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
+
 				<div class="bac-footer">
+					<div class="comunicate">
+						<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
+						<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
+							<i class="icon-mail"></i> consultanos</a>
+						</div>
+
 					<ul>
-						<li><a href="#"><i class="icon-facebook2"></i></a></li>
+						<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
 						<li><a href="#"><i class="icon-twitter2"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="#"><i class="icon-linkedin2"></i></a></li>
@@ -75,10 +83,11 @@
 				</div>
 
 			</aside>
-
-
-				<div id="includedContent"></div>
-
+			<div id="bac-main">
+				<div class="bac-tour">
+					<embed src="http://www.pixvisuals.com.ar/360/index.html" style="width:100%; height: 100vh;">
+				</div>
+			</div>
 		</div>
 
 		<!-- jQuery -->
